// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering by default should output correc tree 1`] = `
<div
  className="m"
>
  <div />
</div>
`;

exports[`rendering with \`scale\` should output correc tree 1`] = `
<div
  className="l"
>
  <div />
</div>
`;
